# ceng-407-408-2025-2026-TARAS-Tarim-Analizi-Sistemi

./: .gitignore  README.md  uniqueness_test.py
Backend/: .env.example  .eslintrc.json  .gitignore  check-farms.js  check-readings.js  deploy.ps1.example  jest.config.ts  lambda_response.json  lambda_response_d1.json  package-lock.json  package.json  populate-72h-readings.js  prisma.config.ts  test-disease-detection.js  test-field-history.js  test_payload.json  tsconfig.json
Disease Detection/: .gitignore  test_multipleModel.py
Irrigation Recommendation/: Tablolar.docx  v1.py
ML/: .gitignore  pyproject.toml  requirements-cpu.txt  requirements.txt
ML/configs/: label_map.py
ML/scripts/: benchmark.py  calibrate_temperature.py  distill_mobilenet.py  evaluate.py  export_onnx.py  fetch_datasets.py  make_splits.py  remap_dataset.py  smoke_test.py  train.py
ML/taras/: cutmix.py  data.py  engine.py  inference_plus.py  loaders.py  model.py  optim.py  sampler.py  train_config.py  transforms.py  utils.py
ML/tests/: test_label_map.py  test_model.py  test_sampler.py  test_transforms.py
Mobil/: .env.example  .gitignore  API_INFO.md  App.tsx  Plane.tsx  app.config.js  app.json  eas.json  global.css  gradle.properties  jest.setup.js  metro.config.js  metro.config.simple.js  package.json  tailwind.config.js  tmpclaude-fd0a-cwd  tsconfig.json  weatherAPI.ts
Mustafa Berk/: confesion.py  random_leaf_test.py  test.py
NewTraningStage1/: stage1_ultimate_history.csv  stage1_ultimate_results.txt
final/: extraction.py
final_set/: .gitignore  augmantaion.py  dataset.py
(+254 files in other folders)
